# srp

./: .claudeignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTINUITY.md  ClaudeCodeSRP.md  LICENSE  Makefile  PDvAgente.md  README.md  SSD.md  agent_ip.bat  build.bat  cctodo.md  conftest.py  constitution.md  install.bat  org_directory.json  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements.txt  run_agent_persistent.bat  run_local.bat  smoke.py  srp_agent_main.py  srp_mvp_plan.md  srp_setup_main.py  srp_tray_main.py  start_agent.bat  start_server.bat  stoperrors.md  telemetry-trust-contract.md  telemetry-trust-plan.md  УСТАНОВКА_АГЕНТА.txt  деплой агента.txt  (+1 more)
.claude/: settings.json
.claude/hooks/: ruff_format.py
.claude/memory/: MEMORY.md  agent-service-task-scheduler.md  agent-stdlib-only.md  battery-swelling-not-age.md  bayesian-weights-uncalibrated.md  cert-subject-grouping.md  coverage-scope.md  disk-fill-median-rebound-guard.md  identity-labels-not-tenancy.md  language-independence.md  netmap-control-panel.md  netmap-identity-spine.md  netmap-unification.md  netmap-unified-api.md  netmap-unified-assembler.md  org-directory-render-time.md  print-counter-fallback.md  system-class-high-trust.md  telemetry-trust-rules.md  tray-split-plane.md  working-style-governors.md
.github/workflows/: ci.yml
client/: __init__.py  agent.py  config.json  config.py  status_writer.py  transport.py  updater.py  winflags.py
client/collectors/: __init__.py  events.py  heartbeat.py  historical.py  inventory.py  lan_discovery.py  lan_names.py  lan_scan.py  liveness.py  network.py  print_jobs.py  printer_ports.py  ps.py  smart.py  sources.py  user_certs.py
client/deploy/: config.template.json  install-service.ps1  reset-clone-device-ids.ps1  setup.py  task_template.xml  uninstall-service.ps1
client/tray/: __init__.py  __main__.py  certs.py  icon.py  panel.py  spool.py  state.py
docs/: agent-install.md  deploy-share-README.md
installer/: setup.py
packaging/: make_update_package.py  srp.spec
server/: __init__.py  api.py  config.json  config.py  db.py  ingest_guards.py  main.py  org_directory.py  pipeline.py  rescore_queue.py  updates.py
server/analytics/: __init__.py  battery.py  diagnostics.py  disk_fill.py  errchain.py  fleet_anomaly.py  health.py  netmap.py  network_risk.py  os_degradation.py  oui.py  rulestats.py  software_aging.py  storage.py  trends.py
server/netdisco/: __init__.py  adapter_merge.py  banner.py  cache.py  changes.py  classify.py  config.py  correlation.py  credentials.py  discovery.py  evidence.py  fusion.py  graph.py  harvest.py  identity.py  inventory.py  l2.py  metrics.py  models.py  naming.py  oids.py  passive.py  reconcile.py  scan.py  scheduler.py  snmp_probe.py  unified.py  wireless.py
server/printers/: __init__.py  ber.py  classify.py  collector.py  config.py  discovery.py  http_probe.py  ipp.py  models.py  oids.py  scan.py  scheduler.py  snmp.py
server/scoring/: __init__.py  bayesian.py  score100.py  scores.py
server/trust/: __init__.py  domains.py  gate.py  staleness.py  states.py  (+1 more)
shared/: __init__.py  schema.py
tests/: conftest.py  test_agent.py  test_agent_logging.py  test_analytics_battery.py  test_analytics_disk_fill.py  test_analytics_fleet_anomaly.py  test_analytics_os_degradation.py  test_analytics_storage.py  test_analytics_trends.py  test_bayesian.py  test_certificates.py  test_clock_time.py  test_collectors_parsers.py  test_collectors_status.py  test_config.py  test_contract.py  test_contract_compat.py  test_contract_network_caps.py  test_contract_printer_ports.py  test_dashboard_api.py  test_dashboard_trust.py  test_dashboard_updates.py  test_db_append_only.py  test_db_fleet_cohort.py  test_db_trust.py  test_deploy_page.py  test_device_card.py  test_device_cleanup.py  test_device_cleanup_api.py  test_device_hero.py  test_device_matrix.py  test_disk_readings.py  test_display_name.py  test_envelope_hostname.py  test_errchain.py  test_health.py  test_health_web.py  test_health_wiring.py  test_heartbeat_shape.py  test_ingest.py  (+135 more)
(+66 files in other folders)
